// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DragDrop defined dropTypes is reflected in the className 1`] = `
<div
  class="lnsDragDrop__container"
  data-test-subj="lnsDragDropContainer"
>
  <button
    class="lnsDragDrop lnsDragDrop-isDroppable lnsDragDrop-isDropTarget"
    data-test-subj="lnsDragDrop"
  >
    Hello!
  </button>
</div>
`;

exports[`DragDrop items that has dropTypes=undefined get special styling when another item is dragged 1`] = `
<SingleDropInner
  className="lnsDragDrop lnsDragDrop-isDroppable lnsDragDrop-isNotDroppable"
  data-test-subj="lnsDragDrop"
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
>
  <button
    className="lnsDragDrop lnsDragDrop-isDroppable lnsDragDrop-isNotDroppable"
    data-test-subj="lnsDragDrop"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    Hello!
  </button>
</SingleDropInner>
`;

exports[`DragDrop renders if nothing is being dragged 1`] = `
<div
  class=""
  data-test-subj="lnsDragDrop_draggable-hello"
>
  <button
    aria-describedby="lnsDragDrop-keyboardInstructions"
    aria-label="hello"
    class="lnsDragDrop__keyboardHandler emotion-euiScreenReaderOnly"
    data-test-subj="lnsDragDrop-keyboardHandler"
  />
  <button
    class="lnsDragDrop lnsDragDrop-isDraggable"
    data-test-subj="lnsDragDrop"
    draggable="true"
  >
    Hello!
  </button>
</div>
`;
